# CCPi-Regularisation-Toolkit

./: .gitignore  CMakeLists.txt  Installation.md  LICENSE  MANIFEST.in  Readme.md  license.txt  pyproject.toml  pytest.ini  readme.doc  run.sh  ~$readme.doc
Core/: CCPiDefines.h  CMakeLists.txt
Core/inpainters_CPU/: Diffusion_Inpaint_core.c  Diffusion_Inpaint_core.h  NonlocalMarching_Inpaint_core.c  NonlocalMarching_Inpaint_core.h
Core/recipe/: bld.bat  meta.yaml
Core/regularisers_CPU/: Diffus4th_order_core.c  Diffus4th_order_core.h  Diffusion_core.c  Diffusion_core.h  FGP_TV_core.c  FGP_dTV_core.c  FGP_dTV_core.h  LLT_ROF_core.c  LLT_ROF_core.h  Nonlocal_TV_core.c  PatchSelect_core.c  PatchSelect_core.h  ROF_TV_core.c  SB_TV_core.c  SB_TV_core.h  TGV_core.c  TGV_core.h  TNV_core.c  TNV_core.h  utils.c  utils.h
Core/regularisers_GPU/: Diffus_4thO_GPU_core.cu  Diffus_4thO_GPU_core.h  LLT_ROF_GPU_core.cu  LLT_ROF_GPU_core.h  NonlDiff_GPU_core.cu  NonlDiff_GPU_core.h  PatchSelect_GPU_core.cu  PatchSelect_GPU_core.h  TGV_GPU_core.cu  TGV_GPU_core.h  TV_FGP_GPU_core.cu  TV_FGP_GPU_core.h  TV_ROF_GPU_core.cu  TV_ROF_GPU_core.h  TV_SB_GPU_core.cu  TV_SB_GPU_core.h  dTV_FGP_GPU_core.cu  dTV_FGP_GPU_core.h  shared.h  utils_cu.h
Core/regularizers_CPU/: FGP_TV_core.c  FGP_TV_core.h  LLT_model_core.h  PatchBased_Regul.c  PatchBased_Regul_core.c  PatchBased_Regul_core.h  ROF_TV_core.c  ROF_TV_core.h  SplitBregman_TV.c  SplitBregman_TV_core.h  TGV_PD_core.h  utils.c  utils.h
Core/regularizers_GPU/Diffus_HO/: Diff4thHajiaboli_GPU.cpp  Diff4th_GPU_kernel.cu  Diff4th_GPU_kernel.h
Core/regularizers_GPU/NL_Regul/: NLM_GPU.cpp  NLM_GPU_kernel.cu  NLM_GPU_kernel.h
Core/regularizers_GPU/TV_FGP/: FGP_TV_GPU_core.cu  FGP_TV_GPU_core.h  TV_FGP_GPU_core.cu  TV_FGP_GPU_core.h
Core/regularizers_GPU/TV_ROF/: TV_ROF_GPU.cu  TV_ROF_GPU.h  TV_ROF_GPU_core.cu  TV_ROF_GPU_core.h
Core/test/: test_regularizer.cpp
Wrappers/Matlab/: CMakeLists.txt  FISTA_REC.m  compile_mex.m
Wrappers/Matlab/demos/: Demo_Phantom3D_Cone.m  demoMatlab_3Ddenoise.m  demoMatlab_denoise.m  demoMatlab_denoise.m~  demoMatlab_inpaint.m
Wrappers/Matlab/mex_compile/: compileCPU_mex.m  compileCPU_mex_Linux.m  compileCPU_mex_WINDOWS.m  compileGPU_mex.m  compile_mex.m
Wrappers/Matlab/supp/: sino_add_artifacts.m
Wrappers/Python/: CMakeLists.txt  FindAnacondaEnvironment.cmake  compile-fista.bat.in  compile-fista.sh.in  fista_module.cpp  setup-fista.py  setup-regularisers.py.in  setup-regularizers.py.in  setup.py
Wrappers/Python/conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_test.py  run_test.py.in  testLena.npy
Wrappers/Python/demo/: test_cpu_regularisers.py  test_cpu_regularizers.py
Wrappers/Python/demos/: demo_cpu_inpainters.py  demo_cpu_regularisers.py  demo_cpu_regularisers3D.py  demo_cpu_vs_gpu_regularisers.py  demo_gpu_regularisers.py  demo_gpu_regularisers3D.py  qualitymetrics.py
Wrappers/Python/fista-recipe/: bld.bat  meta.yaml
Wrappers/Python/src/: cpu_regularisers.pyx  cpu_regularizers.cpp  cpu_regularizers.pyx  fista_module.cpp  fista_module_gpu.pyx  gpu_regularisers.pyx  gpu_regularizers.pyx
Wrappers/Python/test/: astra_test.py  create_phantom_projections.py  metrics.py  run_test.py  simple_astra_test.py  test_cpu_regularizers.py  test_cpu_vs_gpu.py  test_cpu_vs_gpu_regularisers.py  test_cpu_vs_gpu_regularizers.py  test_gpu_regularisers.py  test_gpu_regularizers.py  test_reconstructor.py  test_regularizers.py  view_result.py
Wrappers/Python/tests/: test_tvrof.py
main_func/: CMakeLists.txt  FGP_TV.c  FISTA_REC.m  FISTA_TV.c  LLT_model.c  SplitBregman_TV.c  compile_mex.m  studentst.m
main_func/recipe/: meta.yaml
main_func/regularizers_CPU/: FGP_TV.c  FGP_TV_core.c  FGP_TV_core.h  LLT_model.c  LLT_model_core.c  LLT_model_core.h  PatchBased_Regul.c  PatchBased_Regul_core.c  PatchBased_Regul_core.h  SplitBregman_TV.c  SplitBregman_TV_core.c  SplitBregman_TV_core.h  TGV_PD.c  TGV_PD_core.c  TGV_PD_core.h  utils.h
main_func/regularizers_GPU/Diffus_HO/: Diff4thHajiaboli_GPU.cpp  Diff4th_GPU_kernel.cu  Diff4th_GPU_kernel.h
main_func/regularizers_GPU/NL_Regul/: NLM_GPU.cpp  NLM_GPU_kernel.cu
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/include/: CCPiDefines.h  NonlocalMarching_Inpaint_core.h
src/Core/inpainters_CPU/: Diffusion_Inpaint_core.c  NonlocalMarching_Inpaint_core.c
src/Core/performance_CPU/: README  TNV_core.c.v15  TNV_core.c.v17  TNV_core.c.v18  TNV_core.c.v19  TNV_core.c.v27  TNV_core.c.v32  TNV_core.c.v4.stdver  TNV_core_backtrack_loop.h.v19  TNV_core_loop.h.v32
src/Core/regularisers_CPU/: Diffus4th_order_core.c  Diffus4th_order_core.cpp  Diffus4th_order_core.h  DiffusionMASK_core.c  DiffusionMASK_core.h  Diffusion_core.c  Diffusion_core.cpp  FGP_TV_core.c  FGP_TV_core.cpp  FGP_TV_core.h  FGP_dTV_core.c  FGP_dTV_core.cpp  FGP_dTV_core.h  Gradient_calculations.cpp  Gradient_calculations.h  LLT_ROF_core.c  LLT_ROF_core.cpp  MASK_merge_core.c  MASK_merge_core.h  Nonlocal_TV_core.c  Nonlocal_TV_core.cpp  Nonlocal_TV_core.h  PD_TV_core.c  PD_TV_core.cpp  PD_TV_core.h  PatchSelect_core.c  PatchSelect_core.h  ROF_TV_core.c  ROF_TV_core.cpp  ROF_TV_core.h  SB_TV_core.c  SB_TV_core.cpp  SB_TV_core.h  TGV_core.c  TGV_core.cpp  TGV_core.h  TNV_core.c  TNV_core.cpp  TNV_core_backtrack.c  TNV_core_backtrack_loop.h  (+8 more)
src/Core/regularisers_GPU/: Diffus_4thO_GPU_core.cu  Diffus_4thO_GPU_core.h  LLT_ROF_GPU_core.cu  LLT_ROF_GPU_core.h  NonlDiff_GPU_core.cu  NonlDiff_GPU_core.h  PatchSelect_GPU_core.cu  PatchSelect_GPU_core.h  TGV_GPU_core.cu  TGV_GPU_core.h  TV_FGP_GPU_core.cu  TV_FGP_GPU_core.h  TV_PD_GPU_core.cu  TV_PD_GPU_core.h  TV_ROF_GPU_core.cu  TV_ROF_GPU_core.h  TV_SB_GPU_core.cu  TV_SB_GPU_core.h  shared.h  (+2 more)
src/Matlab/: CMakeLists.txt
src/Python/: CMakeLists.txt  FindAnacondaEnvironment.cmake  Matlab2Python_utils.cpp  Regularizer.py  compile.bat.in  compile.sh.in  fista_module.cpp  pyproject.toml  setup-regularisers.py.in  setup.py  setup.py.in  setup_test.py  test.py  test_reconstructor-os.py  test_reconstructor.py  test_regularizers.py
(+202 files in other folders)
